--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -28,14 +28,18 @@ tokio-tungstenite = "0.17"
 futures = "0.3.5"
 futures-util = "0.3.5"
 futures-channel = "0.3.5"
-hyper = { version = "0.14.10", features = ["client", "server", "tcp"] }
-hyper-staticfile = "0.8"
-hyper-tungstenite = "0.8"
+hyper = { version = "1.8.1", features = ["client", "server"] }
+hyper-staticfile = "0.10.1"
+hyper-tungstenite = "0.19.0"
 websocket-codec = "0.5"
 digest_auth = "0.3.0"
 pisugar-core = { path = "../pisugar-core" }
 shlex = "1.3.0"
 enum-variants-strings = "0.3.0"
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
+actix-web = "4.11.0"
+actix-ws = "0.3.0"
+actix-files = "0.6.8"
 
 [[bin]]
 name = "pisugar-server"
