--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -41,6 +41,7 @@ actix-web = "4.11.0"
 actix-ws = "0.3.0"
 actix-files = "0.6.8"
 actix-cors = "0.7.1"
+serde_json = "1.0.145"
 
 [[bin]]
 name = "pisugar-server"
