--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -42,6 +42,7 @@ actix-ws = "0.3.0"
 actix-files = "0.6.8"
 actix-cors = "0.7.1"
 serde_json = "1.0.145"
+ctor = "0.6.1"
 
 [[bin]]
 name = "pisugar-server"
